--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ Flask==1.1.2
 gunicorn==20.0.4
 itsdangerous==1.1.0
 Jinja2==2.11.3
+joblib==1.0.1
 MarkupSafe==1.1.1
 Werkzeug==1.0.1
 wincertstore==0.2
